--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@
 }
 
 body {
+  overflow: hidden;
   margin: 0;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
